Add: adding login, register, and forgot password dummy

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -34,6 +34,50 @@
       "visitWebsite": "Visit Health Website"
     }
   },
+  "login": {
+    "title": "Log In to Your Account",
+    "identifier": "Username or Email",
+    "identifierPlaceholder": "enter username or email",
+    "password": "Password",
+    "passwordPlaceholder": "enter your password",
+    "loginButton": "Login",
+    "processing": "Processing...",
+    "or": "or",
+    "googleLogin": "Login with Google",
+    "forgot": "Forgot password?",
+    "noAccount": "Don't have an account?",
+    "register": "Register now",
+    "required": "Username/email and password are required",
+    "failed": "Login failed. Please try again.",
+    "googleFail": "Failed to login with Google"
+  },
+  "register": {
+    "title": "Register",
+    "username": "Username",
+    "usernamePlaceholder": "Enter your username",
+    "email": "Email",
+    "emailPlaceholder": "Enter your email",
+    "phone": "Phone Number (optional)",
+    "phonePlaceholder": "Enter your phone number",
+    "password": "Password",
+    "passwordPlaceholder": "Enter your password",
+    "confirmPassword": "Confirm Password",
+    "confirmPasswordPlaceholder": "Re-enter your password",
+    "registerButton": "Register",
+    "processing": "Processing...",
+    "required": "All fields are required except phone number.",
+    "recaptcha": "I'm not a robot",
+    "passwordMismatch": "Password confirmation does not match.",
+    "passwordLength": "Password must be between 8 and 128 characters.",
+    "uppercase": "At least one uppercase letter.",
+    "lowercase": "At least one lowercase letter.",
+    "number": "At least one number.",
+    "noSpaces": "No spaces allowed.",
+    "allowedChars": "Only Latin/Cyrillic letters and allowed special characters are permitted.",
+    "haveAccount": "Already have an account?",
+    "loginLink": "Log in here",
+    "google": "Register with Google"
+  },
   "footer": {
     "continueStory": "Your story is not over. Keep going.",
     "eachStep": "Every step you take is a new chapter waiting to unfold.",
