--- a/frontend/src/locales/id/translation.json
+++ b/frontend/src/locales/id/translation.json
@@ -34,6 +34,50 @@
       "visitWebsite": "Kunjungi Situs Kesehatan"
     }
   },
+  "login": {
+    "title": "Masuk ke Akun Anda",
+    "identifier": "Username atau Email",
+    "identifierPlaceholder": "masukkan username atau email",
+    "password": "Password",
+    "passwordPlaceholder": "masukkan password",
+    "loginButton": "Masuk",
+    "processing": "Memproses...",
+    "or": "atau",
+    "googleLogin": "Login dengan Google",
+    "forgot": "Lupa password?",
+    "noAccount": "Belum punya akun?",
+    "register": "Daftar sekarang",
+    "required": "Username/email dan password harus diisi",
+    "failed": "Login gagal. Silakan coba lagi.",
+    "googleFail": "Gagal login dengan Google"
+  },
+  "register": {
+    "title": "Daftar",
+    "username": "Nama Pengguna",
+    "usernamePlaceholder": "Masukkan nama pengguna",
+    "email": "Email",
+    "emailPlaceholder": "Masukkan email",
+    "phone": "No. Telepon (opsional)",
+    "phonePlaceholder": "Masukkan no. telepon",
+    "password": "Kata Sandi",
+    "passwordPlaceholder": "Masukkan kata sandi",
+    "confirmPassword": "Konfirmasi Kata Sandi",
+    "confirmPasswordPlaceholder": "Ulangi kata sandi",
+    "registerButton": "Daftar",
+    "processing": "Memproses...",
+    "required": "Semua field wajib diisi kecuali no. telepon.",
+    "recaptcha": "Saya bukan robot",
+    "passwordMismatch": "Konfirmasi kata sandi tidak cocok.",
+    "passwordLength": "Kata sandi harus 8-128 karakter.",
+    "uppercase": "Minimal satu huruf kapital.",
+    "lowercase": "Minimal satu huruf kecil.",
+    "number": "Minimal satu angka.",
+    "noSpaces": "Tidak boleh ada spasi.",
+    "allowedChars": "Gunakan hanya karakter Latin/Sirilik dan karakter khusus yang diizinkan.",
+    "haveAccount": "Sudah punya akun?",
+    "loginLink": "Masuk di sini",
+    "google": "Daftar dengan Google"
+  },
   "footer": {
     "continueStory": "Cerita Anda belum selesai. Teruskanlah.",
     "eachStep": "Setiap langkah yang Anda ambil adalah bab baru yang menunggu untuk terungkap.",
