Update: fix login and register, adding ShareYourThoughtPage

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -3,7 +3,7 @@
     "home": "Home",
     "about": "About",
     "profile": "Profile",
-    "services": "Services",
+    "share-your-thoughts": "Share Your Thoughts",
     "emergency": "Emergency",
     "language": {
       "id": "ID",
