--- a/frontend/src/locales/id/translation.json
+++ b/frontend/src/locales/id/translation.json
@@ -3,7 +3,7 @@
     "home": "Beranda",
     "about": "Tentang Kami",
     "profile": "Profil",
-    "services": "Layanan",
+    "share-your-thoughts": "Bagikan Pikiranmu",
     "emergency": "Darurat",
     "language": {
       "id": "ID",
